--- a/_config.yml
+++ b/_config.yml
@@ -6,23 +6,19 @@ language: "" # language to set into html tag, default is en
 
 # User settings
 
-author: Wendell Adriel
+author: Calebe Matos
 author-title: Full Stack Developer
 gravatar: d36a082aacb53b6f76869748fb4b81d4
-email: wendelladriel.ti@gmail.com
-twitter: wendell_adriel
-github: WendellAdriel
-googleplus: +WendellAdriel
-facebook: wendell.adriel.7
-linkedin: wendelladrielti/en
+email: calebematos@gmail.com
+twitter: calebematos
+github: calebematos
+googleplus: +CalebeMatos
+facebook: Calebe.Matos
+linkedin: calebematos/en
 bio: "Brazilian developer. Game, music and technology lover.
-      I graduated in Systems Analysis and Development. I'm a Zend Certified PHP Engineer and Scrum Fundamentals Certified. I love to study and learn new skills,
-      exchange work and study experience with people around me and share my knowledge with the ones that want it. I work with Web Development since 2009 and with
-      Mobile Development since 2015 as Freelancer and in some Brazilian companies too.
-      I'm the creator of CodeShare, a free portal with articles, videos, etc, about Software Development. The purpose of this project is to help people who want
-      to learn about Software Development and start their careers in IT area and to help people that already work with Software Development to improve their
-      technical knowledge to get better job opportunities.
-      I like to work with both: Front-End and Back-End development. I work with many languages, frameworks and technologies."
+      I graduated in Information Systems. I love to study and learn new skills, exchange work and study experience with 
+      people around me and share my knowledge with the ones that want it. I work with Web Development since 2012.
+      I like to work with both: Front-End and Back-End development."
 
 # Skills
 #
@@ -46,119 +42,74 @@ front-end:
   - name: jQuery
     level: 4
   - name: Angular
-    level: 4
-  - name: Vue.js
-    level: 2
+    level: 4 
   - name: Bootstrap
-    level: 4
+    level: 2
   - name: Materialize CSS
     level: 5
-  - name: LESS
-    level: 3
-  - name: SASS
-    level: 3
-  - name: Stylus
-    level: 4
   - name: Gulp
-    level: 4
-  - name: Grunt
-    level: 3
+    level: 2
   - name: Bower
-    level: 3
+    level: 2
 
 back-end:
-  - name: PHP
-    level: 5
-  - name: Node.js
-    level: 3
-  - name: Ruby
-    level: 2
-  - name: Python
-    level: 2
   - name: Java
-    level: 4
-  - name: COBOL
-    level: 2
+    level: 5
   - name: SQL
     level: 4
-  - name: Lua
+  - name: Node.js
     level: 2
+ 
 
 mobile:
   - name: Android
     level: 2
-  - name: Apache Cordova
-    level: 4
-  - name: Ionic
-    level: 4
-  - name: NativeScript
-    level: 3
 
 db:
   - name: MySQL
     level: 4
   - name: PostgreSQL
-    level: 3
-  - name: MongoDB
     level: 4
+  - name: MongoDB
+    level: 1
   - name: SQL Server
     level: 2
   - name: Oracle
-    level: 3
-  - name: Firebase
-    level: 3
-  - name: NoSQL
     level: 4
+  - name: NoSQL
+    level: 1
 
 devops:
-  - name: Docker
-    level: 3
-  - name: Vagrant
-    level: 3
   - name: Jenkins
-    level: 1
-  - name: Git
-    level: 5
-  - name: Apache Maven
     level: 3
+  - name: Git
+    level: 4
+  - name: Apache Maven
+    level: 5
   - name: Continuous Integration
     level: 3
   - name: Continuous Delivery
-    level: 2
+    level: 3
 
 methodologies:
   - name: Agile Methodologies
     level: 3
   - name: Scrum
-    level: 4
-  - name: RUP
     level: 3
 
+
 others:
-  - name: Web Services
-    level: 5
-  - name: REST
-    level: 5
+
   - name: JEE, JSF, JPA, EJB, CDI
-    level: 3
-  - name: iReport, Jasper Reports
-    level: 2
-  - name: Hibernate
-    level: 3
-  - name: Grails
-    level: 2
-  - name: Symfony
-    level: 3
-  - name: Twig
-    level: 4
-  - name: Doctrine ORM
-    level: 3
-  - name: Laravel, Blade, Eloquent ORM
     level: 5
-  - name: Ruby on Rails
-    level: 3
-  - name: MEAN Stack
+  - name: PrimeFaces
     level: 4
+  - name: iReport, Jasper Reports
+    level: 5
+  - name: Hibernate
+    level: 4
+  - name: Web Services
+    level: 3
   - name: Spring
     level: 3
 
