--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,25 @@ front-end:
   - name: jQuery
     level: 4
   - name: Angular
-    level: 4 
+    level: 4
+  - name: Vue.js
+    level: 2
   - name: Bootstrap
-    level: 2
-   - name: Gulp
-    level: 2
+    level: 4
+  - name: Materialize CSS
+    level: 5
+  - name: LESS
+    level: 3
+  - name: SASS
+    level: 3
+  - name: Stylus
+    level: 4
+  - name: Gulp
+    level: 4
+  - name: Grunt
+    level: 3
   - name: Bower
-    level: 2 
+    level: 3
 
 back-end:
   - name: Java
