--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ gravatar: 08bf551daec13f0765c6489ffc97eec8
 email: calebematos@gmail.com
 twitter: calebematos
 github: calebematos
-googleplus: +CalebeMatos
-facebook: Calebe.Matos
+facebook: Calebe.Matos.5
 linkedin: calebematos/en
 bio: "Brazilian developer. Game, music and technology lover.
       I graduated in Information Systems. I love to study and learn new skills, exchange work and study experience with 
